--- a/client/src/assets/css/components/_table.scss
+++ b/client/src/assets/css/components/_table.scss
@@ -30,6 +30,7 @@
           background-color: #fff; 
         }
         td {
+          text-align: center;
           padding: 0.8rem ;
           white-space: nowrap;
           color: var(--paragraph-color);
@@ -81,6 +82,12 @@
     display: none;
     max-height: 0;
   }
+}
+.disc{
+  border-radius: 10px;
+  background-color: rgb(39, 39, 39);
+  padding: 1rem;
+  scale: (0.6)
 }
 
 
